# AI_Projects

./: README.md
AIAgent_Scratch/: README.md  main.py  pyproject.toml  requirements.txt
Automations/n8n/: FormSubmission.json  Invoice Processing Workflow.json
CrewAI/CrewAI_DataC/: Crew_ex.ipynb  Crew_ex.py  Crew_ex2.ipynb  Ouput.md  README.md  ai.txt  main.py  pyproject.toml  requirements.txt  test.txt
Google-Agent-Development-Kit-Travel/: README.md  travel_ui.py
Google-Agent-Development-Kit-Travel/agents/activities_agent/: agent.py
Google-Agent-Development-Kit-Travel/agents/flight_agent/: __main__.py  agent.py
Google-Agent-Development-Kit-Travel/agents/host_agent/: __main__.py  agent.py  task_manager.py
Google-Agent-Development-Kit-Travel/agents/stay_agent/: __main__.py  agent.py
Google-Agent-Development-Kit-Travel/common/: a2a_client.py
Google-Agent-Development-Kit-Travel/shared/: schemas.py
Google_ADK_A2A/: readme.md
Google_ADK_A2A/a2a-project-main/: README.md  main.py  requirements.txt
Google_ADK_A2A/a2a-project-main/elon_agent/: main.py  pyproject.toml  requirements.txt
Google_ADK_A2A/a2a-project-main/elon_agent/elon/: agent.py  tools.py
Google_ADK_A2A/a2a-project-main/jeff_agent/: __main__.py  agent.py  main.py  pyproject.toml  requirements.txt  tools.py
Google_ADK_A2A/a2a-project-main/mark_agent/: __main__.py  agent.py  main.py  pyproject.toml  requirements.txt  tools.py
Google_Projects/currency-agent/currency_agent/: agent.py
Google_Projects/currency-agent/mcp-server/: server.py
Hugging_FaceEx/: Hugging_FaceEx.ipynb  NLP_Applications.ipynb  README.md  inference_ex.py  main.py  pdf_reader.py  pyproject.toml  requirements.txt  sentiment.py  sentiment_ex3.py  sentiment_multi.py  speech_rec.py  summarizer_ex.py  text_generationex.py  tokenize_ex.py
KnowledgeGraphs/knowledge-graph/: README.md  main.py  pyproject.toml
LangChain/Prompts/: chat_prompt_template.py  chatbot.py  main.py  message_placeholder.py  prompt_generator.py  prompt_template.py  prompt_ui.py  pyproject.toml  requirements.txt  temperature.py  test.py  test2.py
LangChain/langchain-structured-output-main/: main.py  pydantic_demo.py  pyproject.toml  requirements.txt  test.py  typeddict_demo.py  with_structured_output_json.py  with_structured_output_llama.py  with_structured_output_pydantic.py  with_structured_output_typeddict.py
LangFuse/langfuse_python/: README.md  langchaindemo.py  langfuse_createPrompt.py  langfuse_prompt.py  main.py  pyproject.toml  requirements.txt
LangGraph/LangGraphRecruiter_proj/: LangGraph_Recruiter.ipynb  README.md  main.py  pyproject.toml  requirements.txt
LangGraph/LangGraph_ChatBot_ch/: README.md  chatbot_rag_backend.py  main.py  pyproject.toml  requirements.txt  streamlit_frontend_rag.py
LangGraph/Projects/: chatbot_with_hitl.py
MCP/: README.md  airbnb.py  airbnb_mcp.json  app.py  browser_mcp.json  flightBooking.py  flight_booking.json  main.py  package.json  pyproject.toml  requirements.txt  weather.py
Rag/Llamindex-Projects/: README.md  main.py  pyproject.toml
Rag/Llamindex-Projects/Basic Rag/: requirements.txt  test.ipynb
movie-recommender-system/: README.md  app.py  main.py  pyproject.toml  recommendation.ipynb  requirements.txt
