[project]
name = "knowledge-graph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.1.0",
    "langchain-experimental>=0.0.45",
    "langchain-openai>=0.1.0",
    "python-dotenv>=1.0.0",
    "pyvis>=0.3.2",
    "streamlit>=1.32.0",
]
