[project]
name = "langchain-structured-output-main"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.2.17",
    "langchain-openai>=1.2.1",
    "pydantic[email]>=2.13.3",
    "pydantic-core>=2.46.3",
    "langchain-huggingface>=1.2.2",
]
