[project]
name = "chatbot-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ddgs>=9.14.1",
    "dotenv>=0.9.9",
    "duckduckgo-search>=8.1.1",
    "faiss-cpu>=1.13.2",
    "ipykernel>=7.2.0",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.0",
    "langchain-openai>=1.1.16",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.1.9",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "langsmith>=0.7.33",
    "pykernel>=0.1.6",
    "pypdf>=6.10.2",
    "streamlit>=1.56.0",
]
