[project]
name = "llamindex-projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "llama-index>=0.14.21",
    "llama-index-core>=0.14.21",
    "llama-index-readers-file>=0.6.0",
    "openai>=2.32.0",
    "pypdf>=6.10.2",
    "python-dotenv>=1.2.2",
]
